--- a/index-nav.html
+++ b/index-nav.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8"> 
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="css/Normalise.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
@@ -350,7 +350,7 @@
 
   <!-- <script> //sticky config
   $(document).ready(function(){
-    $("#mob-menu").sticky({topSpacing:0});
+    $(".header").sticky({topSpacing:0, center: true});
   });
 </script> -->
 <script src="javascript/main.js"></script>
