--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
 
   <body>
     <div id="cookies">
-      
+      <p>By using this site, you consent to us using cookies.<br id="cookie-br"/> To find out more: <a href="#">click here.</a></p>
+      <button id="cookie-btn">I accept</button>
     </div>
 
+    <a href="#"><div id="sticky-chat">
+      <img src="img/icons/chat.svg">
+      <p>Online - click to chat</p>
+    </div></a>
 <!--           Mobile menu---------->
     <div id="mob-menu">
       <ul>
@@ -149,34 +154,31 @@
           </header>
 
       <!--                               Sticky chat------------------>
-          <a href="#"><div id="sticky-chat">
-            <img src="img/icons/chat.svg">
-            <p>Online - click to chat</p>
-          </div></a>
+
 
           <main>
             <div class="owl-carousel">
               <div class="ob" id="ob-1"> <!--        Main overlay              -->
                 <div id="ocb-1" class = "ocb">
-                  <p>Dedicated Insolvency and Business Rescue Specialists <br /><br /><br />
-                  ... Experienced at taking the stress out of critical business situations<br /><br /><br />
-                  <span id="extraEmph" class="overlay-emph">Contact us on: 0800 331 7417</span></p>
+                  <p><span id="ocb-1-text">Dedicated Insolvency and Business Rescue Specialists <br />
+                  ... Experienced at taking the stress out of critical business situations</span><br />
+                  <span id="ocb-1-emph" class="overlay-emph">Contact us on: 0800 331 7417</span></p>
                   <a id="ob-1-btn" class="ob-btn" href="#">INSOLVENCY GUIDES</a>
                 </div>
               </div>
               <div class = "ob" id="ob-2"> <!--        Main overlay              -->
                 <div id="ocb-2" class="ocb">
-                  <p>Need help, <strong style="font-size: 28px">fast</strong>?<br /><br />
-                    <span class="overlay-emph">Our friendly team are here when you need it most.</span><br /><br />
+                  <p>Need help, <strong style="font-size: 28px; display: inline;">fast</strong>?<br />
+                    <span id="ocb-2-emph">Our friendly team are here when<br />you need it most.</span><br />
                     Contact us for a free, no-strings-attached consultation.</p>
                   <a id="ob-2-btn" class="ob-btn" href="#">BOOK YOUR APPOINTMENT NOW</a>
                 </div>
               </div>
               <div class = "ob" id="ob-3"> <!--        Main overlay              -->
                 <div id="ocb-3" class="ocb">
-                  <p>Our team is equipped to deal with even the most complex financial matters <br /><br />
-                    How can we help you?<br /><br /><br />
-                    <span class="overlay-emph">Find your solution today</span></p>
+                  <p><span id="ocb-3-text">Our team is equipped to deal with even the most complex<br />financial matters</span><br />
+                    <span id="ocb-3-text-2">How can we help you?</span><br />
+                    <span id="ocb-3-emph">Find your solution today</span></p>
                     <a id="ob-3-btn-1" class="ob-btn" href="#">Personal debt</a>
                     <a id="ob-3-btn-2" class="ob-btn" href="#">Corporate debt</a>
                 </div>
@@ -375,7 +377,5 @@
   <script src="javascript/owl.carousel.min.js"></script>
   <script src="javascript/main.js"></script>
   <script src="javascript/owl-config.js"></script>
-
-
   </body>
 </html>
