Card repo complete. This is the commit before the image changes

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                   <img src="img/icons/prof.png" class="prof-icon" />
                 </div>
                 <div class="text-box">
-                  <p>We build long term relationships with accountants, banks and other professionals so you can trust that your clients will be looked after by our safe hands.</p>
+                  <p>We build long term relationships with accountants, banks and other professionals so you can trust that your clients will be safe with us.</p>
                   <a class="prof-rm" href="#">Read More</a>
                 </div>
               </div>
