Comparing to other branch

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             </div>
 
             <div class="columns container"> <!--           Welcome   ------->
-              <div class="welcome container">
+              <div class="welcome">
                 <h1>Welcome to McTear Williams & Wood</h1>
                 <h4>Small enough to care - big enough to deliver</h3>
                 <p>As chartered accountants and licensed insolvency practitioners McTear Williams & Wood provides comprehensive solutions and technical expertise across the full range of business rescue and insolvency services. Above all our team of business savvy professionals offers independent practical advice.</p>
@@ -262,7 +262,7 @@
 
 
       <!---                    Side bar   ---------------------->
-              <div class="side-bar container">
+              <div class="side-bar">
                 <div class="sidebtn-box">
                   <ul>
                     <a href="#">
