Mobile styling complete, will now add in children for mobile menu and make it more interactive

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/owl.carousel.css" />
     <link rel="stylesheet" href="css/owl.theme.default.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link rel="stylesheet" href="css/mobile-stylesheet.css" />
     <link rel="stylesheet" href="css/stylesheet.css" />
   </head>
 
@@ -47,7 +48,7 @@
               </div>
             </div>
             <div class="call">
-              <h2 class="calltext"><span id="deletey">CALL US: </span>0800 331 7417</h2>
+              <h2 class="calltext">CALL US: 0800 331 7417</h2>
             </div>
             <!--        Desktop Navbars------------------>
                     <ul id="main-nav"> <!--       MAIN NAV-->
