--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 <!--           Mobile menu---------->
     <div id="mob-menu">
       <ul>
-        <li><a>HOME</a></li>
-        <li><a>ABOUT US</a></li>
-        <li><a>NEWS</a></li>
-        <li><a>CASE STUDIES</a></li>
-        <li><a>FAQs</a></li>
-        <li><a>CONTACT US</a></li>
+        <a href="#"><li>HOME</li></a>
+        <a href="#"><li>ABOUT US</li></a>
+        <a href="#"><li>NEWS</li></a>
+        <a href="#"><li>CASE STUDIES</li></a>
+        <a href="#"><li>FAQs</li></a>
+        <a href="#"><li>CONTACT US</li></a>
       </ul>
     </div>
     <div id="main-body">
