--- a/index.html
+++ b/index.html
@@ -24,9 +24,19 @@
 <!--           Mobile menu---------->
     <div id="mob-menu">
       <ul>
-        <a href="#"><li>HOME</li></a>
-        <a href="#"><li>ABOUT US</li></a>
-        <a href="#"><li>NEWS</li></a>
+        <a href="#"><li id="home">HOME</li></a>
+        <a href="#" id="mob-au"><li>ABOUT US</li></a>
+        <ul id="mob-au-dropdown">
+          <a href="#"><li>Firm profile</li></a>
+          <a href="#"><li>Our senior team</li></a>
+          <a href="#"><li>Brochures and publications</li></a>
+        </ul>
+        <a href="#" id="mob-news"><li>NEWS</li></a>
+        <ul id="mob-news-dropdown">
+          <a href="#"><li>MWW businesses distress index</li></a>
+          <a href="#"><li>Professional networking launches</li></a>
+          <a href="#"><li>Winter newsletter 2015</li></a>
+        </ul>
         <a href="#"><li>CASE STUDIES</li></a>
         <a href="#"><li>FAQs</li></a>
         <a href="#"><li>CONTACT US</li></a>
@@ -54,7 +64,7 @@
                     <ul id="main-nav"> <!--       MAIN NAV-->
                       <a href="#">Home</a>
                       <div id="about-us">
-                        <a href="#">About us</a>
+                        <a>About us</a>
                         <ul id="about-us-dropdown">
                           <a href="#"><li>Firm profile</li></a>
                           <a href="#"><li>Our senior team</li></a>
@@ -62,7 +72,7 @@
                         </ul>
                       </div>
                       <div id="news">
-                        <a href="#">News</a>
+                        <a>News</a>
                         <ul id="news-dropdown">
                           <a href="#"><li>MWW businesses distress index</li></a>
                           <a href="#"><li>Professional networking launches</li></a>
