--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="css/owl.theme.default.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="css/mobile-stylesheet.css" />
-    <link rel="stylesheet" href="css/stylesheet.css" />
+    <link rel="stylesheet" href="css/tablet-stylesheet.css" />
+    <link rel="stylesheet" href="css/desktop-stylesheet.css" />
+    <link rel="stylesheet" href="css/XLdesktop-stylesheet.css" />
   </head>
 
   <body>
@@ -49,120 +51,122 @@
       <!--        Mobile Header---------------------->
         <div id="stickyboi">
           <div class="header">
-            <img id="logo" src="img/logo.png" />
-            <div id="burger">
-              <div id="burger-box">
-                <div></div>
-                <div></div>
-                <div></div>
+            <div id="header-top">
+              <img id="logo" src="img/logo.png" />
+              <div id="burger">
+                <div id="burger-box">
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                </div>
               </div>
             </div>
             <div class="call">
               <h2 class="calltext">CALL US: 0800 331 7417</h2>
             </div>
             <!--        Desktop Navbars------------------>
-                    <ul id="main-nav"> <!--       MAIN NAV-->
-                      <a href="#">Home</a>
-                      <div id="about-us">
-                        <a>About us</a>
-                        <ul id="about-us-dropdown">
-                          <a href="#"><li>Firm profile</li></a>
-                          <a href="#"><li>Our senior team</li></a>
-                          <a href="#"><li>Brochures and publications</li></a>
-                        </ul>
-                      </div>
-                      <div id="news">
-                        <a>News</a>
-                        <ul id="news-dropdown">
-                          <a href="#"><li>MWW businesses distress index</li></a>
-                          <a href="#"><li>Professional networking launches</li></a>
-                          <a href="#"><li>Winter newsletter 2015</li></a>
-                        </ul>
-                      </div>
-                      <a href="#">Case studies</a>
-                      <a href="#">FAQs</a>
-                      <a href="#">Contact us</a>
-                      <a href="#"><img src="img/icons/search.svg" /></a>
-                      <a>0800 331 7417</a>
-                    </ul>
+            <ul id="main-nav"> <!--       MAIN NAV-->
+              <a href="#">Home</a>
+              <div id="about-us">
+                <a>About us</a>
+                <ul id="about-us-dropdown">
+                  <a href="#"><li>Firm profile</li></a>
+                  <a href="#"><li>Our senior team</li></a>
+                  <a href="#"><li>Brochures and publications</li></a>
+                </ul>
+              </div>
+              <div id="news">
+                <a>News</a>
+                <ul id="news-dropdown">
+                  <a href="#"><li>MWW businesses distress index</li></a>
+                  <a href="#"><li>Professional networking launches</li></a>
+                  <a href="#"><li>Winter newsletter 2015</li></a>
+                </ul>
+              </div>
+              <a href="#">Case studies</a>
+              <a href="#">FAQs</a>
+              <a href="#">Contact us</a>
+              <a href="#"><img src="img/icons/search.svg" /></a>
+              <a>0800 331 7417</a>
+            </ul>
 
-                    <ul id="page-nav"><!--         PAGE NAV----->
+            <ul id="page-nav"><!--         PAGE NAV----->
 
-                      <div id="services">
-                        <a href="#">Services</a>
-                        <div id="services-dropdown">
-                          <ul>
-                            <a href='#'><li>Services for business</li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Turnaround finance</span></li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Looking for a business angel?</span></li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Turnaround management</span></li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Company insolvency</span></li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Solvent liquidations</span></li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Time to pay</span></li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Negotiating with creditors</span></li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Talking to your bank</span></li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Businesses for sale</span></li></a>
-                          </ul>
-                          <ul>
-                            <a href="#"><li>Services for professionals</li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Accountants</span></li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Creditors</span></li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Solicitors</span></li></a>
-                          </ul>
-                          <ul>
-                            <a href="#"><li>Services for directors</li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Insolvency pitfalls</span></li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Top tips for directors</span></li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Personal liabilities</span></li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Negotiating with creditors</span></li></a>
-                          </ul>
-                          <ul>
-                            <a href="#"><li>Services for lenders</li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Banks</span></li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Private lenders</span></li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Forensic accounting</span></li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Business reviews</span></li></a>
-                          </ul>
-                        </div>
-                      </div>
+              <div id="services">
+                <a href="#">Services</a>
+                <div id="services-dropdown">
+                  <ul>
+                    <a href='#'><li>Services for business</li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Turnaround finance</span></li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Looking for a business angel?</span></li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Turnaround management</span></li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Company insolvency</span></li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Solvent liquidations</span></li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Time to pay</span></li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Negotiating with creditors</span></li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Talking to your bank</span></li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Businesses for sale</span></li></a>
+                  </ul>
+                  <ul>
+                    <a href="#"><li>Services for professionals</li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Accountants</span></li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Creditors</span></li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Solicitors</span></li></a>
+                  </ul>
+                  <ul>
+                    <a href="#"><li>Services for directors</li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Insolvency pitfalls</span></li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Top tips for directors</span></li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Personal liabilities</span></li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Negotiating with creditors</span></li></a>
+                  </ul>
+                  <ul>
+                    <a href="#"><li>Services for lenders</li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Banks</span></li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Private lenders</span></li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Forensic accounting</span></li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Business reviews</span></li></a>
+                  </ul>
+                </div>
+              </div>
 
-                      <div id="insolv">
-                        <a href="#">Insolvency warning signs</a>
-                        <div id="insolv-dropdown">
-                          <ul>
-                            <a href="#"><li>Take action</li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Traffic light system</span></li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Business healthcheck</span></li></a>
-                          </ul>
-                        </div>
-                      </div>
+              <div id="insolv">
+                <a href="#">Insolvency warning signs</a>
+                <div id="insolv-dropdown">
+                  <ul>
+                    <a href="#"><li>Take action</li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Traffic light system</span></li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Business healthcheck</span></li></a>
+                  </ul>
+                </div>
+              </div>
 
-                      <div id="cred">
-                        <a href="#">Creditor portal</a>
-                        <div id="cred-dropdown">
-                          <ul>
-                            <a href="#"><li>Information for creditors</li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Creditor reports</span></li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Fees and costs</span></li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Regulatory matters</span></li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Statutory forms and downloads</span></li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Insolvency guides</span></li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Creditor guide</span></li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Glossary of terms</span></li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Other guides</span></li></a>
-                            <a href="#"><li><span class="disap-bp">&nbsp;Useful information for creditors following an insolvency appointment</span></li></a>
-                          </ul>
-                        </div>
-                      </div>
+              <div id="cred">
+                <a href="#">Creditor portal</a>
+                <div id="cred-dropdown">
+                  <ul>
+                    <a href="#"><li>Information for creditors</li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Creditor reports</span></li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Fees and costs</span></li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Regulatory matters</span></li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Statutory forms and downloads</span></li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Insolvency guides</span></li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Creditor guide</span></li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Glossary of terms</span></li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Other guides</span></li></a>
+                    <a href="#"><li><span class="disap-bp">&nbsp;Useful information for creditors following an insolvency appointment</span></li></a>
+                  </ul>
+                </div>
+              </div>
 
-                      <a href="#">Testimonials</a>
-                      <a href="#">Our locations</a>
-                    </ul>
+              <a href="#">Testimonials</a>
+              <a href="#">Our locations</a>
+            </ul>
+
+          </div>
 
         </div>
-
-            </div>
-          </header>
+      </header>
 
       <!--                               Sticky chat------------------>
 
@@ -187,11 +191,13 @@
               </div>
               <div class = "ob" id="ob-3"> <!--        Main overlay              -->
                 <div id="ocb-3" class="ocb">
-                  <p><span id="ocb-3-text">Our team is equipped to deal with even the most complex<br />financial matters</span><br />
-                    <span id="ocb-3-text-2">How can we help you?</span><br />
+                  <p><span id="ocb-3-text">Our team is equipped to deal with even the most <br />complex insolvency cases.</span><br />
+                    <span id="ocb-3-text-2">How can we help you?</span> <br />
                     <span id="ocb-3-emph">Find your solution today</span></p>
-                    <a id="ob-3-btn-1" class="ob-btn" href="#">Personal debt</a>
-                    <a id="ob-3-btn-2" class="ob-btn" href="#">Corporate debt</a>
+                    <div id="ocb-3-btn-box">
+                      <a id="ob-3-btn-1" class="ob-btn" href="#">Personal debt</a>
+                      <a id="ob-3-btn-2" class="ob-btn" href="#">Corporate debt</a>
+                    </div>
                 </div>
               </div>
             </div>
@@ -204,7 +210,7 @@
                   <img src="img/icons/busi.png" class="busi-icon" alt="icon"/>
                 </div>
                 <div class="text-box">
-                  <p>From business rescue through to the full range of insolvency options our qualified professionals will ensure the best outcome for your company.</p>
+                  <p>From business rescue to a full range of insolvency options: our qualified professionals will ensure the best outcome for your company.</p>
                   <a class="busi-rm" href="#">Read More</a>
                 </div>
               </div>
@@ -215,7 +221,7 @@
                   <img src="img/icons/prof.png" class="prof-icon" />
                 </div>
                 <div class="text-box">
-                  <p>We build long term relationships with accountants, banks and other professionals so you can trust that your clients will be safe with us.</p>
+                  <p>We have built long term relationships with banks and accountants, so you can trust that your clients will be safe with us.</p>
                   <a class="prof-rm" href="#">Read More</a>
                 </div>
               </div>
@@ -226,7 +232,7 @@
                   <img src="img/icons/dir.png" class="dir-icon"/>
                 </div>
                 <div class="text-box">
-                  <p>Concerned about the future of your company? Or worried about personal liability? You may have more options than you realise. Find out more with a simple consultation.</p>
+                  <p>Concerned about the future of your company? You may have more options than you realise. Find out more with a simple consultation.</p>
                   <a class="dir-rm"href="#">Read More</a>
                 </div>
               </div>
@@ -237,7 +243,7 @@
                   <img src="img/icons/lend.png" class="lend-icon"/>
                 </div>
                 <div class="text-box">
-                  <p>Let McTear Williams & Wood help rescue failing customers with refinancing and insolvency options allowing you to recover your money.</p>
+                  <p>Let McTear Williams & Wood help rescue struggling customers with refinancing and insolvency options allowing you to recover your money.</p>
                   <a class="lend-rm" href="#">Read More</a>
                 </div>
               </div>
@@ -325,9 +331,9 @@
 
                 <div class="misc-buttons">
                   <ul>
-                    <li>BLOG</li>
-                    <li>FREE 1-2-1 ADVICE</li>
-                    <li>CONTACT US</li>
+                    <a href="#"><li>BLOG</li></a>
+                    <a href="#"><li>FREE 1-2-1 ADVICE</li></a>
+                    <a href="#"><li>CONTACT US</li></a>
                   </ul>
                 </div>
 
